syntax = "proto3";

option csharp_namespace = "ProductService.WebApi.Protos";

package product;

service ProductGrpc {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc AddProduct (AddProductRequest) returns (AddProductResponse);
  rpc UpdateProductStock (UpdateProductStockRequest) returns (UpdateProductStockResponse);
  rpc CheckProductStock (GetProductRequest) returns (CheckProductStockResponse);
}

message GetProductRequest {
  int32 product_id = 1;
}

message GetProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
}

message AddProductRequest {
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
}

message AddProductResponse {
  int32 id = 1;
  bool success = 2;
}

message UpdateProductStockRequest {
  int32 product_id = 1;
  int32 quantity = 2;
}

message UpdateProductStockResponse {
  bool success = 1;
  int32 new_stock = 2;
}

message CheckProductStockResponse {
	int32 stock = 1;
}
